[gd_scene load_steps=11 format=3 uid="uid://bbdsb0u2divij"]

[ext_resource type="Script" path="res://IPO.gd" id="1_hrqnp"]
[ext_resource type="Texture2D" uid="uid://dxdt0nnkq0w1c" path="res://bank.png" id="2_12ehy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2v42f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_12ehy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vl7gj"]
size = Vector2(105, 90.5)

[sub_resource type="Theme" id="Theme_i4tbw"]
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = null

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6akdm"]
bg_color = Color(0, 0.188235, 0.964706, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xxc3y"]
bg_color = Color(0.0117647, 0.223529, 0.478431, 1)

[sub_resource type="Theme" id="Theme_4njrs"]
RichTextLabel/styles/focus = SubResource("StyleBoxFlat_6akdm")
RichTextLabel/styles/normal = SubResource("StyleBoxFlat_xxc3y")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hd771"]
bg_color = Color(0.694118, 0, 0.105882, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Theme" id="Theme_2t2pl"]
RichTextLabel/styles/focus = null
RichTextLabel/styles/normal = SubResource("StyleBoxFlat_hd771")

[node name="IPO" type="StaticBody2D"]
script = ExtResource("1_hrqnp")

[node name="IPOImage" type="AnimatedSprite2D" parent="."]
position = Vector2(50, 47.5)
scale = Vector2(0.195312, 0.189453)
sprite_frames = SubResource("SpriteFrames_2v42f")

[node name="Area2D" type="Area2D" parent="."]

[node name="IPOCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(52.5, 44.75)
shape = SubResource("RectangleShape2D_vl7gj")

[node name="AttemptIPOControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 17.0
offset_top = -54.0
offset_right = 92.0
offset_bottom = 2.0

[node name="IPOInfoContainer" type="HBoxContainer" parent="AttemptIPOControl"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="IPOButton" type="Button" parent="AttemptIPOControl/IPOInfoContainer"]
layout_mode = 2
theme = SubResource("Theme_i4tbw")
text = "Attempt 
IPO"

[node name="WinLabel" type="RichTextLabel" parent="."]
offset_left = -4.0
offset_top = -46.0
offset_right = 109.0
theme = SubResource("Theme_4njrs")
bbcode_enabled = true
text = "[center] YOU DID IT! 
$$$$[/center]"
fit_content = true
scroll_active = false

[node name="FailedLabel" type="RichTextLabel" parent="."]
offset_left = -5.0
offset_top = -51.0
offset_right = 110.0
theme = SubResource("Theme_2t2pl")
bbcode_enabled = true
text = "[center]Need 
$$$[/center]"
fit_content = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="AttemptIPOControl/IPOInfoContainer/IPOButton" to="." method="_on_ipo_button_pressed"]
